Added endpoints to get columns
