# restapi/configure_jtree_metadata.go
@@ -101,6 +101,14 @@ func getSamplesByQuery(query *models.Query) []*models.Sample {
 	return allSamples(queryString)
 }
 
+func getSampleColumns() []string {
+	return repos.GetSampleColumns()
+}
+
+func getPatientColumns() []string {
+	return repos.GetPatientColumns()
+}
+
 func configureFlags(api *operations.JtreeMetadataAPI) {
 	// api.CommandLineOptionsGroups = []swag.CommandLineOptionsGroup{ ... }
 }
@@ -146,6 +154,12 @@ func configureAPI(api *operations.JtreeMetadataAPI) http.Handler {
 	})
 	api.GetSamplesByQueryHandler = operations.GetSamplesByQueryHandlerFunc(func(params operations.GetSamplesByQueryParams) middleware.Responder {
 		return operations.NewGetSampleOK().WithPayload(getSamplesByQuery(params.Query))
+	})
+	api.GetSampleColumnsHandler = operations.GetSampleColumnsHandlerFunc(func(params operations.GetSampleColumnsParams) middleware.Responder {
+		return operations.NewGetSampleColumnsOK().WithPayload(getSampleColumns())
+	})
+	api.GetPatientColumnsHandler = operations.GetPatientColumnsHandlerFunc(func(params operations.GetPatientColumnsParams) middleware.Responder {
+		return operations.NewGetPatientColumnsOK().WithPayload(getPatientColumns())
 	})
 
 	api.ServerShutdown = func() {}
